# BgfxSimpleApp

./: .gitignore  CMakeLists.txt  README.md
app/: IBgfxApp.h
app/win32/: IBgfxWin32App.h  Win32Application.cpp  Win32Application.h
src/: BgfxSimpleApp.cpp  BgfxSimpleApp.h
